--- a/index.html
+++ b/index.html
@@ -493,10 +493,10 @@
                 <img class="cookie-gif" src="png/Galletaicono.png" alt="Galleta girando">
             </div>
             <div class="story-text">
-                <p>GalleTonasa nació en 2018 en la cocina de María y Carlos, un matrimonio apasionado por la repostería artesanal que soñaba con crear galletas que evocaran los sabores de su infancia, pero con un toque gourmet y contemporáneo.</p>
-                <p>Lo que comenzó como un hobby para compartir con amigos y familiares pronto se convirtió en una demanda creciente. Las galletas de María y Carlos empezaron a ser el regalo favorito en celebraciones y eventos.</p>
-                <p>En 2020, decidieron dar el salto y fundar oficialmente GalleTonasa, un nombre que combina "galleta" con "satonasa", una palabra inventada por su hija pequeña cuando intentaba decir "sabrosa".</p>
-                <p>Hoy, nuestro pequeño taller artesanal se ha convertido en una marca reconocida por la calidad de sus ingredientes, la originalidad de sus sabores y el compromiso con lo artesanal y natural. Seguimos elaborando cada galleta con el mismo amor y dedicación del primer día, honrando nuestra promesa de ofrecer solo lo mejor.</p>
+                <p>GalleTonas nació como idea para el emprendimiento que satizfacta las necesidades de las personas que tienen un estilo de vida saludable y cuidan sus comidas diariamente.</p>
+                <p>Las galletas son de avena 100% naturales y con proteina suficiente para manejarnos en un mercado de linea fitness, especialiazdo para la gente que tiene rutinas de entrenamiento o desea entrar a este mundo.</p>
+                <p>Somos 3 compañeros que diseñamos todo un sistema y proceso desde la producción hasta la empaquetación de las galletas, hoyal fin nuestro pequeño emprendimiento artesanal se ha convertido en una realidad.</p>
+                <p>Seremos una marca reconocida por la calidad de nuestros ingredientes, la originalidad de sus sabores y el compromiso con lo artesanal. Siempre adelante y con mente en lo fitness.</p>
             </div>
         </div>
     </section>
